# matapan

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  run-api.ps1  settings.json  ui_language_and_delivery_plan.md
apps/web/: README.md  package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/console/: layout.tsx  page.tsx
apps/web/src/app/console/accounts/: page.tsx
apps/web/src/app/console/rules/: page.tsx
apps/web/src/app/console/transactions/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/lib/: api.ts  contracts.ts  mock-data.ts
crates/ai/src/: lib.rs  ollama.rs  orchestrator.rs  tools.rs
crates/ai_client/: Cargo.toml
crates/ai_client/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  lib.rs  models_stub.rs  repository.rs  router.rs  rule_handlers.rs  server.rs
crates/backend_api/: README.md
crates/backend_api/src/: error.rs  handlers.rs  repository.rs  router.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/dashboard_engine/: Cargo.toml
crates/dashboard_engine/src/: lib.rs
crates/data/: Cargo.toml  README.md
crates/data/bank_statement_parsers/alipay/: Cargo.toml  README.md
crates/data/bank_statement_parsers/alipay/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/alipay/utils/: convert_to_standard_csv.py
crates/data/bank_statement_parsers/carpay/: Cargo.toml  README.md
crates/data/bank_statement_parsers/carpay/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/china_construction_bank/: Cargo.toml  README.md
crates/data/bank_statement_parsers/china_construction_bank/src/: accounts.rs  lib.rs  main.rs  transactions.rs
crates/data/bank_statement_parsers/general_parser/: Cargo.toml  README.md
crates/data/bank_statement_parsers/general_parser/src/: accounts.rs  lib.rs  main.rs  transactions.rs
crates/data/bank_statement_parsers/interactive_brokers/: Cargo.toml  README.md
crates/data/bank_statement_parsers/interactive_brokers/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/intesa_sanpaolo/: Cargo.toml  README.md
crates/data/bank_statement_parsers/intesa_sanpaolo/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/nordnet/: Cargo.toml
crates/data/bank_statement_parsers/revolut/: Cargo.toml  README.md  settings.json
crates/data/bank_statement_parsers/revolut/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/revolut/src/parser/: accounts.rs  mod.rs  transactions.rs
crates/data/bank_statement_parsers/skandinaviska_enskilda_banken/: Cargo.toml  README.md
crates/data/bank_statement_parsers/skandinaviska_enskilda_banken/src/: accounts.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/template/: Cargo.toml  README.md
crates/data/bank_statement_parsers/template/src/: accounts.rs  instruments.rs  lib.rs  main.rs  positions.rs  transactions.rs
crates/data/bank_statement_parsers/wechat/: Cargo.toml  README.md
crates/data/bank_statement_parsers/wechat/src/: accounts.rs  instruments.rs  lib.rs  main.rs  transactions.rs
crates/data/bank_statements_parsers/avanza/: Cargo.toml
crates/data/bank_statements_parsers/china_construction_bank/: Cargo.toml
crates/data/bank_statements_parsers/interactive_brokers/src/: main.rs
crates/data/bank_statements_parsers/intesa_sanpaolo/: Cargo.toml
crates/data/interactive_brokers/: Cargo.toml
crates/data/revolut/: Cargo.toml
crates/data/revolut/src/: main.rs
crates/data/src/: lib.rs
crates/data/src/data_parsers/: mod.rs
crates/data/src/data_parsers/avanza/: mod.rs
crates/data/src/data_parsers/ibkr/: mod.rs
crates/data/src/data_parsers/nordnet/: mod.rs
crates/data/src/data_parsers/revolut/: mod.rs
crates/data/wechat/: Cargo.toml
crates/data_normalization/: Cargo.toml
crates/data_normalization/src/: ecli.rs  hicp.rs  lib.rs
crates/data_pipeline/: Cargo.toml
crates/data_pipeline/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/logger/: Cargo.toml  README.md
crates/logger/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/rules/: Cargo.toml  README.md
crates/rules/src/: main.rs
crates/settings_loader/: Cargo.toml
crates/settings_loader/src/: lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: accounts.rs  balance_references.rs  contract.rs  database.rs  description_enrichment.rs  fx_rates.rs  hicp.rs  instruments.rs  lib.rs  normalized_database.rs  pipeline.rs  positions.rs  round_digits.rs  rules.rs  transactions.rs
crates/utils/src/parser/: accounts.rs  contract.rs  instruments.rs  mod.rs  transactions.rs
database/: .database.example.json  .database.template.json  .rules.example.json  .rules.template.json  database.json  database_normalized.json  fx_rates.json  hicp_series.json  template.json
docs/: API_QUICKSTART.md  AUTO_REFRESH_GUIDE.md  BACKEND_REDESIGN.md  FRONTEND_IMPLEMENTATION.md  FULLSTACK_QUICKSTART.md  RULES_ENGINE.md  SETUP_COMPLETE.md  auto-refresh-polling.tsx
frontend/: README.md  next.config.ts  run-frontend.ps1
frontend/app/: layout.tsx  page.tsx
frontend/components/dashboard/: assets-breakdown-chart.tsx  net-worth-chart.tsx  snapshot-table.tsx
frontend/hooks/: use-dashboard.ts
frontend/lib/: api.ts  query-provider.tsx  types.ts
input/: template.json
input_files/: template.json
settings/: settings.json
src/: main.rs  models.rs  pipeline.rs
