# When the workspace is divided, there is no need of package and dependencies here

[workspace]
members = [
    "crates/data/bank_statements_parsers/revolut", "crates/data/bank_statements_parsers/intesa_sanpaolo", "crates/data/bank_statements_parsers/interactive_brokers", "crates/data/bank_statements_parsers/china_construction_bank", "crates/data/bank_statements_parsers/avanza", "crates/data/bank_statements_parsers/alipay", "crates/data/bank_statements_parsers/skandinaviska_enskilda_banken", "crates/data/bank_statements_parsers/wechat", "crates/data/bank_statements_parsers/nordnet",
]

resolver = "3"
