[package]
name = "dashboard_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
thiserror = "2.0.17"

[lib]
name = "dashboard_engine"
path = "src/lib.rs"

[[bin]]
name = "generate-dashboard"
path = "src/bin/generate.rs"
