[package]
name = "data_import"
version = "0.1.0"
authors = ["Silvio Dacol <silvio@example.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "data_import"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
