[package]
name = "data_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
models = { path = "../models" }

[[bin]]
name = "generate-dashboard"
path = "src/bin/generate.rs"

