[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1"
ai_client = { path = "../ai_client" }
logger = { path = "../logger" }
freecurrencyapi = { package = "freecurrencyapi-rs", version = "0.1.0" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
dotenvy = "0.15"
