[package]
name = "general_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = "1"
calamine = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
encoding_rs = "0.8"
ai_client = { path = "../../../ai_client" }
utils = { path = "../../../utils" }
