[package]
name = "intesa_sanpaolo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intesa_sanpaolo"
path = "src/main.rs"

[lib]
name = "intesa_sanpaolo"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
calamine = "0.26"
chrono = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
utils = { path = "../../../utils" }

